--- a/src/modals/StoryModal.module.css
+++ b/src/modals/StoryModal.module.css
@@ -265,6 +265,11 @@
   .rightArrow {
     display: none;
   }
+  .modalContainer {
+    width: 100%;
+    height: 100vh;
+    max-width: none;
+  }
   .modalContent {
     width: 100%;
     height: 100vh;
