--- a/src/modals/StoryModal.module.css
+++ b/src/modals/StoryModal.module.css
@@ -265,14 +265,18 @@
   .rightArrow {
     display: none;
   }
-  .modalContainer {
+
+  .modalContent {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
     width: 100%;
     height: 100vh;
     max-width: none;
   }
-  .modalContent {
-    width: 100%;
-    height: 100vh;
-    max-width: none;
+  .storyTop {
+    padding-top: 15px;
   }
 }
